--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 NEXT_PUBLIC_API_URL=http://localhost:3000/api/65080f0e957a82a37a601d0b
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_YnJpZ2h0LWVtdS04NC5jbGVyay5hY2NvdW50cy5kZXYk
+CLERK_SECRET_KEY=sk_test_XYcCIOb5IDdQUrX9vqIJ1igpHiYVzPforSLJXoWaTT
