--- a/package.json
+++ b/package.json
@@ -29,12 +29,12 @@
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.276.0",
-    "next": "13.4.19",
+    "next": "^13.5.4",
     "next-auth": "^4.23.1",
     "postcss": "8.4.29",
     "query-string": "^8.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
