--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_API_URL=http://localhost:3000/api/65080f0e957a82a37a601d0b
+NEXT_PUBLIC_API_URL=https://admin.crptotech.com/api/65080f0e957a82a37a601d0b
 NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=AIzaSyA6MMtp4s4H1YqwSJP1goS7xQwhPCKBgSY
